<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Delta Chat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="or_separator">or</string>
    <string name="clear_search">Clear Search</string>
    <string name="link">Link</string>
    <string name="scan">Scan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="def">Default</string>
    <string name="default_value">Default (%1$s)</string>
    <string name="default_value_as_above">Default (same as above)</string>
    <string name="custom">Custom</string>
    <string name="none">None</string>
    <string name="automatic">Automatic</string>
    <string name="strict">Strict</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="open_attachment">Open Attachment</string>
    <string name="join">Join</string>
    <string name="rejoin">Rejoin</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="update">Update</string>
    <string name="emoji">Emoji</string>
    <string name="attachment">Attachment</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="close_window">Close Window</string>
    <string name="forward">Forward</string>
    <string name="create">Create</string>
    <string name="later">Later</string>
    <string name="resend">Resend</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="mute">Mute</string>
    <string name="ephemeral_messages">Disappearing Messages</string>
    <string name="ephemeral_messages_hint">Applies to all members of this chat if they use Delta Chat; they can still copy, save, and forward messages or use other e-mail clients.</string>
    <string name="save">Save</string>
    <string name="chat">Chat</string>
    <string name="media">Media</string>
    <string name="profile">Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="start_chat">Start Chat</string>
    <string name="show_full_message">Show Full Message…</string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_read_short">Mark Read</string>
    <string name="loading">Loading…</string>
    <string name="hide">Hide</string>
    <string name="activate">Activate</string>
    <string name="load_remote_content">Load Remote Images</string>
    <string name="load_remote_content_ask">Remote images can track you.\n\nThis setting also may load fonts and other content. If disabled, embedded or cached images may appear.\n\nLoad remote images?</string>
    <string name="always">Always</string>
    <string name="always_load_remote_images">Always Load Remote Images</string>
    <string name="once">Once</string>
    <string name="show_warning">Show Warning</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="not_now">Not now</string>
    <string name="never">Never</string>
    <string name="one_moment">One moment…</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="offline">Offline</string>
    <string name="next">Next</string>
    <string name="error">Error</string>
    <string name="error_x">Error: %1$s</string>
    <string name="no_app_to_handle_data">Can\'t find an app to handle this type of data.</string>
    <string name="no_browser_installed">No browser installed.</string>
    <string name="file_not_found">Could not find %1$s.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="contacts_headline">Contacts</string>
    <string name="email_address">E-Mail Address</string>
    <string name="bad_email_address">Bad e-mail address.</string>
    <string name="password">Password</string>
    <string name="existing_password">Existing Password</string>
    <string name="now">Now</string>
    <string name="danger">Danger</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_seen_at">Last seen at %1$s</string>
    <string name="last_seen_relative">Last seen %1$s</string>
    <string name="last_seen_unknown">Last seen: Unknown</string>
    <plurals name="n_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d min</item>
    </plurals>
    <plurals name="n_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="n_chats">
        <item quantity="one">%d chat</item>
        <item quantity="other">%d chats</item>
    </plurals>
    <plurals name="n_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <plurals name="n_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <plurals name="n_reactions">
        <item quantity="one">%d reaction</item>
        <item quantity="other">%d reactions</item>
    </plurals>
    <plurals name="n_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="n_recipients">
        <item quantity="one">%d recipient</item>
        <item quantity="other">%d recipients</item>
    </plurals>
    <plurals name="n_selected">
        <item quantity="one">%d Selected</item>
        <item quantity="other">%d Selected</item>
    </plurals>
    <string name="self">Me</string>
    <string name="draft">Draft</string>
    <string name="image">Image</string>
    <string name="reply_noun">Reply</string>
    <string name="gif">GIF</string>
    <string name="sticker">Sticker</string>
    <string name="add_to_sticker_collection">Add to Sticker Collection</string>
    <string name="add_stickers_instructions">To add stickers, tap "Open Sticker Folder", create a subfolder for your sticker pack, and drag image and sticker files there</string>
    <string name="open_sticker_folder">Open Sticker Folder</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="voice_message">Voice Message</string>
    <string name="forwarded">Forwarded</string>
    <string name="forwarded_message">Forwarded Message</string>
    <string name="forwarded_by">Forwarded by %1$s</string>
    <string name="video">Video</string>
    <string name="documents">Documents</string>
    <string name="contact">Contact</string>
    <string name="bot">Bot</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="toggle_fullscreen">Toggle Full Screen Mode</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="gallery">Gallery</string>
    <string name="images_and_videos">Images and Videos</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="webxdc_app">App</string>
    <string name="webxdc_apps">Apps</string>
    <string name="webxdc_store_url">App Picker URL</string>
    <string name="webxdc_store_url_explain">If set, the URL will be used as the App Picker instead of the default one</string>
    <string name="unknown">Unknown</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="cyan">Cyan</string>
    <string name="purple">Purple</string>
    <string name="magenta">Magenta</string>
    <string name="white">White</string>
    <string name="zoom">Zoom</string>
    <string name="extra_small">Extra small</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra large</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="menu_new_contact">New Contact</string>
    <string name="menu_new_classic_contact">Add Contact Manually</string>
    <string name="new_classic_contact_explain">Manually added contacts can be used to text to classic e-mail and are not guaranteed end-to-end encrypted.</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_new_group">New Group</string>
    <string name="clone_chat">Clone Chat</string>
    <string name="broadcast_list">Broadcast List</string>
    <string name="broadcast_lists">Broadcast Lists</string>
    <string name="new_broadcast_list">New Broadcast List</string>
    <string name="add_recipients">Add Recipients</string>
    <string name="edit_broadcast_list">Edit Broadcast List</string>
    <string name="broadcast_list_name">Broadcast List Name</string>
    <string name="please_enter_broadcast_list_name">Please enter a name for the broadcast list.</string>
    <string name="menu_send">Send</string>
    <string name="menu_toggle_keyboard">Toggle Emoji Keyboard</string>
    <string name="menu_edit_group">Edit Group</string>
    <string name="menu_group_name_and_image">Group Name and Image</string>
    <string name="menu_show_global_map">All Locations</string>
    <string name="menu_archive_chat">Archive Chat</string>
    <string name="menu_unarchive_chat">Unarchive Chat</string>
    <string name="menu_add_attachment">Add Attachment</string>
    <string name="menu_leave_group">Leave Group</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="menu_delete_messages">Delete Messages</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="menu_delete_location">Delete this Location?</string>
    <string name="menu_message_details">Message Info</string>
    <string name="menu_copy_to_clipboard">Copy to Clipboard</string>
    <string name="share_invite_link">Share Invite Link</string>
    <string name="share_invite_link_explain">Anyone with this link can view your profile and start a chat with you. Only share it with people you trust.</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_friends_text">Contact me on Delta Chat:\n%1$s</string>
    <string name="menu_copy_selection_to_clipboard">Copy Selection</string>
    <string name="menu_copy_link_to_clipboard">Copy Link</string>
    <string name="menu_copy_text_to_clipboard">Copy Text</string>
    <string name="menu_copy_image_to_clipboard">Copy Image</string>
    <string name="menu_copy_email_to_clipboard">Copy E-Mail</string>
    <string name="paste_from_clipboard">Paste from Clipboard</string>
    <string name="ask_copy_unopenable_link_to_clipboard">The link "%1$d" can not be opened in the web browser. Do you want to copy the link to the clipboard instead?</string>
    <string name="menu_forward">Forward Message</string>
    <string name="menu_reply">Reply to Message</string>
    <string name="menu_mute">Mute Notifications</string>
    <string name="menu_unmute">Unmute</string>
    <string name="menu_export_attachment">Export Attachment</string>
    <string name="menu_export_attachments">Export Attachments</string>
    <string name="menu_all_media">All Media</string>
    <string name="subject_icon_description">Subject Icon</string>
</resources>