<?xml version="1.0" encoding="utf-8"?>
<org.thoughtcrime.securesms.components.InputPanel xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_panel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?attr/input_panel_bg_color"
    android:clickable="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center_vertical"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.thoughtcrime.securesms.components.QuoteView
            android:id="@+id/quote_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:visibility="gone"
            app:message_type="preview"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/subject_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone">

            <!-- Icon for Subject -->
            <ImageView
                android:id="@+id/subject_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/subject_icon_description"
                android:src="@drawable/ic_subject" />

            <!-- Subject Input Field -->
            <EditText
                android:id="@+id/subject_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="Subject"
                android:inputType="text"
                android:textSize="16sp" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/input_field_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quote_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:minHeight="40dp"
                android:paddingStart="6dp"
                android:paddingLeft="6dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp">

                <org.thoughtcrime.securesms.components.emoji.EmojiToggle
                    android:id="@+id/emoji_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/touch_highlight_background"
                    android:contentDescription="@string/menu_toggle_keyboard"
                    android:minHeight="40dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp" />

                <org.thoughtcrime.securesms.components.ComposeText
                    android:id="@+id/embedded_text_editor"
                    style="@style/ComposeEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:nextFocusRight="@+id/send_button"
                    android:nextFocusForward="@+id/send_button"
                    tools:hint="Send message"
                    tools:visibility="invisible">

                    <requestFocus />
                </org.thoughtcrime.securesms.components.ComposeText>

                <org.thoughtcrime.securesms.components.HidingLinearLayout
                    android:id="@+id/quick_attachment_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                    <ImageButton
                        android:id="@+id/toggle_subject_button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/touch_highlight_background"
                        android:contentDescription="Edit button"
                        android:paddingLeft="11dp"
                        android:paddingTop="6dp"
                        android:paddingRight="11dp"
                        android:paddingBottom="6dp"
                        android:src="@drawable/ic_edit_subject" />

                    <ImageButton
                        android:id="@+id/quick_camera_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/touch_highlight_background"
                        android:contentDescription="@string/camera"
                        android:paddingLeft="11dp"
                        android:paddingTop="6dp"
                        android:paddingRight="11dp"
                        android:paddingBottom="6dp"
                        android:src="?quick_camera_icon" />

                    <org.thoughtcrime.securesms.components.MicrophoneRecorderView
                        android:id="@+id/recorder_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:clipChildren="false"
                        android:clipToPadding="false">

                        <include layout="@layout/microphone_recorder_view" />

                    </org.thoughtcrime.securesms.components.MicrophoneRecorderView>

                </org.thoughtcrime.securesms.components.HidingLinearLayout>

                <org.thoughtcrime.securesms.components.AnimatingToggle
                    android:id="@+id/button_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="?attr/send_button_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/input_field_frame_layout">

                    <ImageButton
                        android:id="@+id/attach_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_touch_highlight_background"
                        android:contentDescription="@string/menu_add_attachment"
                        android:nextFocusLeft="@+id/embedded_text_editor"
                        android:src="@drawable/ic_attach_white_24dp" />

                    <org.thoughtcrime.securesms.components.SendButton
                        android:id="@+id/send_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circle_touch_highlight_background"
                        android:contentDescription="@string/menu_send"
                        android:nextFocusLeft="@+id/embedded_text_editor"
                        android:paddingLeft="11dp"
                        android:paddingTop="6dp"
                        android:paddingRight="6dp"
                        android:paddingBottom="6dp"
                        android:scaleType="fitCenter"
                        android:src="?conversation_transport_sms_indicator" />

                </org.thoughtcrime.securesms.components.AnimatingToggle>
            </LinearLayout>

            <include layout="@layout/recording_layout" />

        </FrameLayout>

    </LinearLayout>

</org.thoughtcrime.securesms.components.InputPanel>
